--- a/app/views/layouts/parts/app/_head.html.erb
+++ b/app/views/layouts/parts/app/_head.html.erb
@@ -14,12 +14,15 @@
       <div class='large-3 columns'>
         <h1>
           <a href='/'>
-            <img src='http://placehold.it/400x100&text=Logo'>
+            <img src='/assets/ReFresh_Logo.png'>
           </a>
         </h1>
       </div>
-      <div class='large-9 columns'>
-        <ul class='right button-group topnav'>
+      <div class='large-9 columns topnav'>
+        <ul class='right button-group radius'>
+          <li>
+            <a class='button' href='/'>ReFresh!</a>
+          </li>
           <li>
             <a class='button' href='/leadership'>Leadership</a>
           </li>
@@ -32,8 +35,8 @@
         </ul>
       </div>
       <div class='large-12 columns'>
-        <p class='text-center'>
-          Healthy pastors lead healthy families, which produce healthy churches.
-        </p>
+        <h1 class="slogan">
+          "Healthy pastors lead healthy families, which produce healthy churches."
+        </h1>
       </div>
     </div>
