--- a/app/views/layouts/parts/app/_head.html.erb
+++ b/app/views/layouts/parts/app/_head.html.erb
@@ -14,7 +14,7 @@
       <div class='large-3 columns'>
         <h1>
           <a href='/'>
-            <img src='/assets/ReFresh_Logo.png'>
+            <img src='https://s3.amazonaws.com/refreshministries/images/refresh_main/ReFresh_Logo.png'>
           </a>
         </h1>
       </div>
