--- a/app/views/layouts/parts/app/_foot.html.erb
+++ b/app/views/layouts/parts/app/_foot.html.erb
@@ -1,28 +1,29 @@
-    <footer class='row'>
-      <div class='large-12 columns'>
-        <hr>
-        <div class='row'>
-          <div class='large-6 columns'>
-            <p>
-              Copyright &copy;2014 ReFresh Ministries - All Rights Reserved
-            </p>
-          </div>
-          <div class='large-6 columns'>
-            <ul class='inline-list right'>
-              <li>
-                <a href='/leadership'>Leadership</a>
-              </li>
-              <li>
-                <a href='/schedule'>Schedule</a>
-              </li>
-              <li>
-                <a href='/about'>About</a>
-              </li>
-            </ul>
+    <div class="footer-nav">
+      <footer class='row'>
+        <div class='large-12 columns'>
+          <div class='row'>
+            <div class='large-6 columns'>
+              <p>
+                Copyright &copy;2014 ReFresh Ministries - All Rights Reserved
+              </p>
+            </div>
+            <div class='large-6 columns'>
+              <ul class='inline-list right'>
+                <li>
+                  <a href='#leadership'>Leadership</a>
+                </li>
+                <li>
+                  <a href='#contact'>Contact</a>
+                </li>
+                <li>
+                  <a href='#about'>About</a>
+                </li>
+              </ul>
+            </div>
           </div>
         </div>
-      </div>
-    </footer>
+      </footer>
+    </div>
     <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
     <script type="text/javascript">
       $(document).foundation();
