--- a/app/views/layouts/parts/home/_orbit.html.erb
+++ b/app/views/layouts/parts/home/_orbit.html.erb
@@ -1,15 +1,9 @@
-    <div class='row'>
-      <div class='large-12 columns'>
-        <ul class='example-orbit' data-orbit>
-          <li>
-            <img src='http://placehold.it/1000x400&amp;text=[%20img%201%20]'>
-          </li>
-          <li>
-            <img src='http://placehold.it/1000x400&amp;text=[%20img%202%20]'>
-          </li>
-          <li>
-            <img src='http://placehold.it/1000x400&amp;text=[%20img%203%20]'>
-          </li>
-        </ul>
+<div class="home-top">
+  <div class='row'>
+    <div class='large-12 columns'>
+      <div id="orbital">
+        <h1>Healthy pastors lead healthy families, which produce healthy churches.</h1>
       </div>
     </div>
+  </div>
+</div>
