--- a/app/assets/stylesheets/lib/variables/overrides/_alerts.scss
+++ b/app/assets/stylesheets/lib/variables/overrides/_alerts.scss
@@ -1,5 +1,5 @@
 // Primary Color
-$primary-color: $blueDark;
+$primary-color: #3AB54A;
 $primary-background: rgba($primary-color, 0.5);
 $primary-dark: darken($primary-color, 10%);
 $primary-darker: darken($primary-color, 20%);
