--- a/app/views/layouts/home.html.erb
+++ b/app/views/layouts/home.html.erb
@@ -6,4 +6,6 @@
 
 <%= render "layouts/parts/home/contactus" %>
 
+<%= render "layouts/parts/home/about" %>
+
 <%= render "layouts/parts/app/foot" %>
