--- a/app/views/layouts/parts/home/_tripanels.html.erb
+++ b/app/views/layouts/parts/home/_tripanels.html.erb
@@ -1,23 +1,25 @@
-    <div class='row'>
-      <div class='large-4 columns'>
-        <img src='http://placehold.it/400x300&amp;text=[img]'>
-        <h4>This is a content section</h4>
-        <p>
-          Bacon ipsum dolor sit amet nulla ham qui sint exercitation eiusmod commodo, chuck duis velit. Aute in reprehenderit, dolore aliqua non est magna in labore pig pork biltong. Eiusmod swine spare ribs reprehenderit culpa. Boudin aliqua adipisicing rump corned beef.
-        </p>
-      </div>
-      <div class='large-4 columns'>
-        <img src='http://placehold.it/400x300&amp;text=[img]'>
-        <h4>This is a content section</h4>
-        <p>
-          Bacon ipsum dolor sit amet nulla ham qui sint exercitation eiusmod commodo, chuck duis velit. Aute in reprehenderit, dolore aliqua non est magna in labore pig pork biltong. Eiusmod swine spare ribs reprehenderit culpa. Boudin aliqua adipisicing rump corned beef.
-        </p>
-      </div>
-      <div class='large-4 columns'>
-        <img src='http://placehold.it/400x300&amp;text=[img]'>
-        <h4>This is a content section</h4>
-        <p>
-          Bacon ipsum dolor sit amet nulla ham qui sint exercitation eiusmod commodo, chuck duis velit. Aute in reprehenderit, dolore aliqua non est magna in labore pig pork biltong. Eiusmod swine spare ribs reprehenderit culpa. Boudin aliqua adipisicing rump corned beef.
-        </p>
-      </div>
+<div class="tripanels">
+  <div class='row'>
+    <div class='large-4 columns'>
+      <img src='/assets/IMG_0084_small.jpg'>
+      <h4>Coaching</h4>
+      <p>
+        Bacon ipsum dolor sit amet nulla ham qui sint exercitation eiusmod commodo, chuck duis velit. Aute in reprehenderit, dolore aliqua non est magna in labore pig pork biltong. Eiusmod swine spare ribs reprehenderit culpa. Boudin aliqua adipisicing rump corned beef.
+      </p>
     </div>
+    <div class='large-4 columns'>
+      <img src='/assets/IMG_0409_small.JPG'>
+      <h4>ReFreshment</h4>
+      <p>
+        Bacon ipsum dolor sit amet nulla ham qui sint exercitation eiusmod commodo, chuck duis velit. Aute in reprehenderit, dolore aliqua non est magna in labore pig pork biltong. Eiusmod swine spare ribs reprehenderit culpa. Boudin aliqua adipisicing rump corned beef.
+      </p>
+    </div>
+    <div class='large-4 columns'>
+      <img src='/assets/IMG_0326_small.JPG'>
+      <h4>Leadership</h4>
+      <p>
+        Bacon ipsum dolor sit amet nulla ham qui sint exercitation eiusmod commodo, chuck duis velit. Aute in reprehenderit, dolore aliqua non est magna in labore pig pork biltong. Eiusmod swine spare ribs reprehenderit culpa. Boudin aliqua adipisicing rump corned beef.
+      </p>
+    </div>
+  </div>  
+</div>
