--- a/app/assets/stylesheets/refresh/_layout.scss
+++ b/app/assets/stylesheets/refresh/_layout.scss
@@ -8,7 +8,7 @@
 body{
   @extend .full-background;
   background-position: 0px 0px;
-  background-image: url('/assets/waterfall.jpg');
+  background-image: url('http://assets.refresh-ministries.org/images/main/waterfall.jpg');
   color: white;
   
   h1,h2,h3,h4,h5,h6{
