--- a/app/views/layouts/parts/app/_head.html.erb
+++ b/app/views/layouts/parts/app/_head.html.erb
@@ -18,7 +18,7 @@
         <div class='large-3 columns'>
           <h1>
             <a href='/'>
-              <img src='/assets/ReFresh_Logo_transparent.png'>
+              <img src='http://assets.refresh-ministries.org/images/main/ReFresh_Logo_transparent.png'>
             </a>
           </h1>
         </div>
