--- a/app/views/layouts/parts/app/_foot.html.erb
+++ b/app/views/layouts/parts/app/_foot.html.erb
@@ -2,12 +2,12 @@
       <footer class='row'>
         <div class='large-12 columns'>
           <div class='row'>
-            <div class='large-6 columns'>
+            <div class='large-6 small-12 columns'>
               <p>
                 Copyright &copy;2014 ReFresh Ministries - All Rights Reserved
               </p>
             </div>
-            <div class='large-6 columns'>
+            <div class='large-6 small-12 columns'>
               <ul class='inline-list right'>
                 <li>
                   <a href='#leadership'>Leadership</a>
