--- a/app/views/layouts/parts/home/_tripanels.html.erb
+++ b/app/views/layouts/parts/home/_tripanels.html.erb
@@ -1,21 +1,21 @@
 <div class="tripanels">
   <div class='row'>
     <div class='large-4 columns'>
-      <img src='http://assets.refresh-ministries.org/images/main/IMG_0084_small.jpg'>
+      <img src='https://dwrxm7q9lpoz8.cloudfront.net/www/images/IMG_0084_small.jpg'>
       <h4>Coaching</h4>
       <p>
         Bacon ipsum dolor sit amet nulla ham qui sint exercitation eiusmod commodo, chuck duis velit. Aute in reprehenderit, dolore aliqua non est magna in labore pig pork biltong. Eiusmod swine spare ribs reprehenderit culpa. Boudin aliqua adipisicing rump corned beef.
       </p>
     </div>
     <div class='large-4 columns'>
-      <img src='http://assets.refresh-ministries.org/images/main/IMG_0409_small.JPG'>
+      <img src='https://dwrxm7q9lpoz8.cloudfront.net/www/images/IMG_0409_small.JPG'>
       <h4>ReFreshment</h4>
       <p>
         Bacon ipsum dolor sit amet nulla ham qui sint exercitation eiusmod commodo, chuck duis velit. Aute in reprehenderit, dolore aliqua non est magna in labore pig pork biltong. Eiusmod swine spare ribs reprehenderit culpa. Boudin aliqua adipisicing rump corned beef.
       </p>
     </div>
     <div class='large-4 columns'>
-      <img src='http://assets.refresh-ministries.org/images/main/IMG_0326_small.JPG'>
+      <img src='https://dwrxm7q9lpoz8.cloudfront.net/www/images/IMG_0326_small.JPG'>
       <h4>Leadership</h4>
       <p>
         Bacon ipsum dolor sit amet nulla ham qui sint exercitation eiusmod commodo, chuck duis velit. Aute in reprehenderit, dolore aliqua non est magna in labore pig pork biltong. Eiusmod swine spare ribs reprehenderit culpa. Boudin aliqua adipisicing rump corned beef.
