--- a/app/views/layouts/parts/app/_head.html.erb
+++ b/app/views/layouts/parts/app/_head.html.erb
@@ -19,7 +19,7 @@
         <div class='large-3 columns'>
           <h1>
             <a href='/'>
-              <img src='https://dwrxm7q9lpoz8.cloudfront.net/www/images/ReFresh_Logo_transparent.png'>
+              <img src='https://drqkr2smv75b.cloudfront.net/www/images/ReFresh_Logo_transparent.png'>
             </a>
           </h1>
         </div>
