--- a/app/views/layouts/parts/app/_head.html.erb
+++ b/app/views/layouts/parts/app/_head.html.erb
@@ -15,9 +15,7 @@
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
     <%= javascript_include_tag 'vendor/modernizr' %>
     <%= csrf_meta_tags %>
-    <link href='http://fonts.googleapis.com/css?family=Dancing+Script' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Cinzel:400,700,900' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
+    <script src="//use.edgefonts.net/poiret-one:n4:all;source-sans-pro:n2,i2,n3,i3,n4,i4,n6,i6,n7,i7,n9,i9:all;kaushan-script.js"></script>
   </head>
   <body class='<%= controller.controller_name %>'>
     
