--- a/app/views/layouts/parts/home/_tripanels.html.erb
+++ b/app/views/layouts/parts/home/_tripanels.html.erb
@@ -4,21 +4,21 @@
       <img src='https://drqkr2smv75b.cloudfront.net/www/images/IMG_0084_small.jpg'>
       <h4>Coaching</h4>
       <p>
-        Bacon ipsum dolor sit amet nulla ham qui sint exercitation eiusmod commodo, chuck duis velit. Aute in reprehenderit, dolore aliqua non est magna in labore pig pork biltong. Eiusmod swine spare ribs reprehenderit culpa. Boudin aliqua adipisicing rump corned beef.
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce mattis venenatis dui et ultricies. In at quam nec nulla mollis consectetur. Duis elementum fringilla elementum. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Curabitur eget augue quis augue pharetra sodales. Donec sed enim id dolor sagittis consectetur. Praesent suscipit mauris sed sapien pretium rhoncus.
       </p>
     </div>
     <div class='large-4 columns'>
       <img src='https://drqkr2smv75b.cloudfront.net/www/images/IMG_0409_small.JPG'>
       <h4>ReFreshment</h4>
       <p>
-        Bacon ipsum dolor sit amet nulla ham qui sint exercitation eiusmod commodo, chuck duis velit. Aute in reprehenderit, dolore aliqua non est magna in labore pig pork biltong. Eiusmod swine spare ribs reprehenderit culpa. Boudin aliqua adipisicing rump corned beef.
+        Vivamus tristique molestie nunc eget placerat. Ut eu tristique enim. Donec sapien massa, faucibus id rutrum et, venenatis eget arcu. Pellentesque vel eros risus. Nullam eu eros nec velit consequat tempor. Morbi vehicula fringilla leo a rhoncus. Vestibulum at mauris in massa laoreet interdum. In ullamcorper, sem in pharetra efficitur, leo nulla bibendum mauris, nec aliquam leo risus faucibus metus. In interdum facilisis ligula nec viverra. Sed id massa posuere lectus luctus varius at et erat. Vestibulum vehicula est magna. Nullam laoreet vehicula odio vel aliquet. Curabitur ut arcu metus.
       </p>
     </div>
     <div class='large-4 columns'>
       <img src='https://drqkr2smv75b.cloudfront.net/www/images/IMG_0326_small.JPG'>
       <h4>Leadership</h4>
       <p>
-        Bacon ipsum dolor sit amet nulla ham qui sint exercitation eiusmod commodo, chuck duis velit. Aute in reprehenderit, dolore aliqua non est magna in labore pig pork biltong. Eiusmod swine spare ribs reprehenderit culpa. Boudin aliqua adipisicing rump corned beef.
+        Sed vitae vestibulum sem, eu consequat elit. Donec libero dui, euismod sed augue eu, sagittis hendrerit enim. Suspendisse congue nisl et purus suscipit convallis. Vivamus libero arcu, semper at fringilla et, convallis ut risus. Vivamus ex felis, vehicula sit amet neque sit amet, vulputate sagittis neque. Donec mollis nunc neque, at scelerisque tellus condimentum vitae. Nam nec augue ornare, porttitor tortor et, vulputate eros. Quisque finibus augue vel auctor iaculis. Proin in leo nisi.
       </p>
     </div>
   </div>  
