--- a/app/views/layouts/parts/home/_orbit.html.erb
+++ b/app/views/layouts/parts/home/_orbit.html.erb
@@ -2,7 +2,7 @@
   <div class='row'>
     <div class='large-12 columns'>
       <div id="orbital">
-        <h1>Healthy pastors lead healthy families which produce healthy churches.</h1>
+        <h1>Healthy pastors lead healthy families which produce healthy churches</h1>
       </div>
     </div>
   </div>
