--- a/app/views/layouts/parts/home/_tripanels.html.erb
+++ b/app/views/layouts/parts/home/_tripanels.html.erb
@@ -1,25 +1,72 @@
 <div class="tripanels">
   <div class='row'>
-    <div class='large-4 columns'>
+    <div class='small-12 large-4 columns'>
       <img src='https://drqkr2smv75b.cloudfront.net/www/images/IMG_0084_small.jpg'>
       <h4>Coaching</h4>
       <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce mattis venenatis dui et ultricies. In at quam nec nulla mollis consectetur. Duis elementum fringilla elementum. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Curabitur eget augue quis augue pharetra sodales. Donec sed enim id dolor sagittis consectetur. Praesent suscipit mauris sed sapien pretium rhoncus.
+        Coach / Mentor – These may be over used words within ministry circles today… However, everyone needs someone to help take them to the next level. A few years ago I had the opportunity to chat with one of the power hitters in Major League Baseball. After I was able to get the “stars” out of my eyes, he told me something pretty amazing. He has a personal hitting coach. I thought, “Wow, now here’s a guy making millions of dollars doing something that less than 1% of all athletes get to do at the professional level, and he admits he needs a personal coach!”
+      </p>
+      <p>
+        He went on to say that there are ‘blind-spots’ that he is unable to see… patterns that he can get into that can make his batting average slump. He needs someone to point that out in order to maintain his sharpness at the plate. Someone to see and help him through the issues he can’t see to do what he is best at doing.
+      </p>
+      <p>
+        He went on to say that there are ‘blind-spots’ that he is unable to see… patterns that he can get into that can make his batting average slump. He needs someone to point that out in order to maintain his sharpness at the plate. Someone to see and help him through the issues he can’t see to do what he is best at doing.
+      </p>
+      <h4>What if we had that attitude in ministry?</h4>
+      <p>
+        To recognize that we can’t do this alone. That God has placed people in our path to help us see, not only the issues we miss in the busyness of ministry, but the potential in us that we seem to overlook or deny.
+      </p>
+      <p>
+        The challenge of building and communicating your vision or mission, building your team, resolving issues of conflict, dealing with growth and leading/hiring staff… All at the same time you are diligently preparing for the weekend.
+      </p>
+      <p>
+        The ReFresh Leadership and Coaching Network is designed to walk beside you to give insight in order to bring more capacity to your leadership. Whether you are in a ‘slump’ or just want to take your leadership up a notch, we are willing to be there and help you through.
+      </p>
+      <p>
+        Click <a href="#coaching">here</a> to find out what our coaching network offers and how to get started.
       </p>
     </div>
-    <div class='large-4 columns'>
+    <div class='small-12 large-4 columns'>
       <img src='https://drqkr2smv75b.cloudfront.net/www/images/IMG_0409_small.JPG'>
-      <h4>ReFreshment</h4>
+      <h4>Barnabas Experience</h4>
       <p>
-        Vivamus tristique molestie nunc eget placerat. Ut eu tristique enim. Donec sapien massa, faucibus id rutrum et, venenatis eget arcu. Pellentesque vel eros risus. Nullam eu eros nec velit consequat tempor. Morbi vehicula fringilla leo a rhoncus. Vestibulum at mauris in massa laoreet interdum. In ullamcorper, sem in pharetra efficitur, leo nulla bibendum mauris, nec aliquam leo risus faucibus metus. In interdum facilisis ligula nec viverra. Sed id massa posuere lectus luctus varius at et erat. Vestibulum vehicula est magna. Nullam laoreet vehicula odio vel aliquet. Curabitur ut arcu metus.
+        After 30 years of ministry I can tell you many things NOT to do… They far out weigh the things I could tell you to do in order to finish strong. However, at the top of that list to do is take care of your family. That starts by making your spouse a priority! It is heartbreaking today to see pastor’s lose their marriage while trying to bring hope to others.
+      </p>
+      <p>
+        That’s what the Barnabas Experience is all about. Ministry is all consuming and in today’s culture, there are no boundaries that define personal life and ministry life. Sometimes you just need to ‘get away’ for a weekend and re-focus.
+      </p>
+      <p>
+        During the B.E. weekend, you and your spouse are invited into a home with great hospitality and no responsibility! You will have the opportunity to tour San Francisco and enjoy dinner with a few couples that have been in your same shoes. During the weekend we will have a time where the guys will be together doing ‘guy stuff’ and the ladies will be enjoying a cooking group. (They get to eat everything they cook). There is lots of free time as well just to recalibrate. Sunday morning you will have the opportunity to be in a dynamic service at South Bay Church to worship together. If you desire, we can arrange for you to have a “backstage” moment with the Staff and leaders of the church. 
+      </p>
+      <p>
+        Click <a href="#barnabas">here</a> for detail information about the Barnabas Experience and when the next weekend is available.
       </p>
     </div>
-    <div class='large-4 columns'>
+    <div class='small-12 large-4 columns'>
       <img src='https://drqkr2smv75b.cloudfront.net/www/images/IMG_0326_small.JPG'>
-      <h4>Leadership</h4>
+      <h4>Leadership Nuggets</h4>
       <p>
-        Sed vitae vestibulum sem, eu consequat elit. Donec libero dui, euismod sed augue eu, sagittis hendrerit enim. Suspendisse congue nisl et purus suscipit convallis. Vivamus libero arcu, semper at fringilla et, convallis ut risus. Vivamus ex felis, vehicula sit amet neque sit amet, vulputate sagittis neque. Donec mollis nunc neque, at scelerisque tellus condimentum vitae. Nam nec augue ornare, porttitor tortor et, vulputate eros. Quisque finibus augue vel auctor iaculis. Proin in leo nisi.
+        This past weekend I had the privilege to attend and event entitled TBC. These three letters stand for Transforming the Bay with Christ. The beauty of this movement is that it was not started by a pastor. That’s right! A business leader here in the San Francisco Bay area began to pull together other Christ-following business leaders and pastors for one purpose: To bring a revival to the bay area!
       </p>
+      <p>
+        This past weekend there were over 850 people in attendance. That’s phenomenal considering their mission… “To catalyze a Gospel movement in the Bay Area.” Pretty simple huh? Here’s their vision: “Thy will be done on earth as it is in heaven.” One of the things I’ve learned since arriving in the bay area is that there has never been a revival movement for Christ anywhere in this area. I believe it’s beginning to happen!
+      </p>
+      <p>
+        The great missionary/evangelist, Luis Palau was the speaker. He spoke for 20 minutes… (Did I mention, this was not started by a pastor). Here is what Luis said starts a revival, whether it be in a city, church or entire bay area of California… 
+      </p>
+      <p>
+        My prayer is that you grab a hold of these principles and allow the Holy Spirit move in your area: John 14:12-17
+      </p>
+      <ol>
+        <li>Dream Great Dreams – Plan Great Plans</li>
+        <ul>
+          <li>Jesus said… “If you continue to trust me, you’ll do greater works than I ever did.”</li>
+        </ul>
+        <li>Pray Great Prayers</li>
+        <ul>
+          <li>“I’ll do whatever you ask in my name.”</li>
+        </ul>
+      </ol>
     </div>
   </div>  
 </div>
