Application cleanup and beginnings of Barnabas Experience and Coaching

--- a/app/assets/stylesheets/loader.css.scss
+++ b/app/assets/stylesheets/loader.css.scss
@@ -27,3 +27,5 @@
 // Application Styles
 @import "refresh/layout";
 @import "refresh/mobile";
+@import "refresh/controllers/barnabas";
+@import "refresh/controllers/coaching";
