--- a/app/views/layouts/parts/app/_head.html.erb
+++ b/app/views/layouts/parts/app/_head.html.erb
@@ -31,10 +31,10 @@
         <div class='large-9 columns topnav'>
           <ul class='right button-group radius'>
             <li>
-              <a class='button' href='#refresh'>ReFresh!</a>
+              <a class='button' href='/coaching'>Coaching</a>
             </li>
             <li>
-              <a class='button' href='#leadership'>Leadership</a>
+              <a class='button' href='/barnabas'>Barnabas</a>
             </li>
             <li>
               <a id="nav_contact" class='button' href='#contact'>Contact</a>
