--- a/app/views/layouts/parts/app/_foot.html.erb
+++ b/app/views/layouts/parts/app/_foot.html.erb
@@ -4,7 +4,7 @@
           <div class='row'>
             <div class='large-6 small-12 columns'>
               <p>
-                Copyright &copy;2014 ReFresh Ministries - All Rights Reserved
+                Copyright &copy;<%= Time.new.year %> ReFresh Ministries - All Rights Reserved
               </p>
             </div>
             <div class='large-6 small-12 columns'>
