--- a/app/views/layouts/parts/app/_foot.html.erb
+++ b/app/views/layouts/parts/app/_foot.html.erb
@@ -10,13 +10,19 @@
             <div class='large-6 small-12 columns'>
               <ul class='inline-list right'>
                 <li>
-                  <a href='#leadership'>Leadership</a>
+                  <a id="nav_top" href='#top'>Top</a>
                 </li>
                 <li>
-                  <a href='#contact'>Contact</a>
+                  <a href='/barnabas'>Barnabas</a>
                 </li>
                 <li>
-                  <a href='#about'>About</a>
+                  <a href='/coaching'>Coaching</a>
+                </li>
+                <li>
+                  <a href='/contact'>Contact</a>
+                </li>
+                <li>
+                  <a href='/about'>About</a>
                 </li>
               </ul>
             </div>
