--- a/app/views/layouts/parts/home/_contactus.html.erb
+++ b/app/views/layouts/parts/home/_contactus.html.erb
@@ -1,22 +1,22 @@
-<div class="contact">
+<div id="contact_panel" class="contact">
   <div class='row'>
     <div class='large-12 columns'>
       <div class='panel radius'>
-        <h4>Get in touch!</h4>
+        <h4>Get in touch with ReFresh Ministries!</h4>
         <div class='row'>
           <div class='large-9 columns'>
             <p>
-              We would love to hear from you!
+              For further information about <a href="/coaching">ReFresh Coaching</a> or the <a href="/barnabas">Barnabas Experience</a>, <a href='#contact' data-reveal-id="contact-modal">contact us</a>.
             </p>
           </div>
           <div class='large-3 columns'>
-            <a class='radius button right btn-contact' href='#contact' data-reveal-id="contact-modal">Contact Us</a>
+            &nbsp;
           </div>
           
           <div id="contact-modal" class="reveal-modal" data-reveal>
             <h2>Contact ReFresh Ministries</h2>
             <p class="lead">
-              We would love to get to know you, how can we reach you?
+              
             </p>
             
             <form>
