--- a/app/views/layouts/parts/home/_orbit.html.erb
+++ b/app/views/layouts/parts/home/_orbit.html.erb
@@ -1,9 +1,7 @@
 <div class="home-top">
   <div class='row'>
-    <div class='large-12 columns'>
-      <div id="orbital">
-        <h1>Healthy pastors lead healthy families which produce healthy churches</h1>
-      </div>
+    <div class='small-12 large-12 columns'>
+      <img src="https://drqkr2smv75b.cloudfront.net/www/images/frontpage_healthy.png">
     </div>
   </div>
 </div>
