--- a/app/assets/stylesheets/lib/variables/foundation/_globals.scss
+++ b/app/assets/stylesheets/lib/variables/foundation/_globals.scss
@@ -52,7 +52,8 @@ $default-float: left;
 
 // We use these as default colors throughout
 // IMPORTANT: These colors are overridden in overrides/_alerts.css.scss
-$primary-color: #008CBA;
+//$primary-color: #008CBA;
+$primary-color: #3AB54A;
 $secondary-color: #e7e7e7;
 $alert-color: #f04124;
 $success-color: #43AC6A;
