--- a/app/views/layouts/parts/home/_head.html.erb
+++ b/app/views/layouts/parts/home/_head.html.erb
@@ -31,23 +31,20 @@
         <div class='large-9 columns topnav'>
           <ul class='right button-group radius'>
             <li>
-              <a class='button' href='/'>Home</a>
-            </li>
-            <li>
               <a class='button' href='/coaching'>Coaching</a>
             </li>
             <li>
               <a class='button' href='/barnabas'>Barnabas</a>
             </li>
             <li>
-              <a id="nav_contact" class='button' href='/contact'>Contact</a>
+              <a id="nav_contact" class='button' href='#contact'>Contact</a>
             </li>
             <li>
               <button href="#" data-dropdown="about-menu" aria-controls="about-menu" aria-expanded="false" class="button dropdown">About</button><br> 
               <ul id="about-menu" data-dropdown-content class="f-dropdown" aria-hidden="true" tabindex="-1"> 
-                <li><a href="/about/refresh">ReFresh Ministries</a></li> 
+                <li><a id="nav_about" href="#about">ReFresh Ministries</a></li> 
                 <li><a href="/about/cal">Cal Woods</a></li> 
-                <li><a href="#">Another Bio</a></li> 
+                <li><a href="#">Another Bio Here</a></li> 
               </ul>
             </li>
           </ul>
