--- a/app/views/layouts/parts/home/_tripanels.html.erb
+++ b/app/views/layouts/parts/home/_tripanels.html.erb
@@ -1,36 +1,33 @@
 <div class="tripanels">
   <div class='row'>
     <div class='small-12 large-4 columns'>
-      <img src='https://drqkr2smv75b.cloudfront.net/www/images/IMG_0084_small.jpg'>
-      <h4>Coaching</h4>
+      <img src='https://drqkr2smv75b.cloudfront.net/www/images/Cal_Tina_GoldenGate_SM.jpg'>
+      <h4><a href="/coaching">Coaching</a></h4>
       <p>
-        Coach / Mentor – These may be over used words within ministry circles today… However, everyone needs someone to help take them to the next level. A few years ago I had the opportunity to chat with one of the power hitters in Major League Baseball. After I was able to get the “stars” out of my eyes, he told me something pretty amazing. He has a personal hitting coach. I thought, “Wow, now here’s a guy making millions of dollars doing something that less than 1% of all athletes get to do at the professional level, and he admits he needs a personal coach!”
+        Coach / Mentor – These may be over used words within ministry circles today. However, everyone needs someone to help take them to the next level. A few years ago I had the opportunity to chat with one of the power hitters in Major League Baseball. After I was able to get the “stars” out of my eyes, he told me something pretty amazing. He has a personal hitting coach. I thought, “Wow, now here’s a guy making millions of dollars doing something that less than 1% of all athletes get to do at the professional level and he admits he needs a personal coach!”
       </p>
       <p>
-        He went on to say that there are ‘blind-spots’ that he is unable to see… patterns that he can get into that can make his batting average slump. He needs someone to point that out in order to maintain his sharpness at the plate. Someone to see and help him through the issues he can’t see to do what he is best at doing.
-      </p>
-      <p>
-        He went on to say that there are ‘blind-spots’ that he is unable to see… patterns that he can get into that can make his batting average slump. He needs someone to point that out in order to maintain his sharpness at the plate. Someone to see and help him through the issues he can’t see to do what he is best at doing.
+        He went on to say that there are ‘blind-spots’ that he is unable to see. There are patterns that he can get into that can make his batting average slump. He needs someone to point that out in order to maintain his sharpness at the plate. Someone to see and help him through the issues he can’t see to do what he is best at doing.
       </p>
       <h4>What if we had that attitude in ministry?</h4>
       <p>
-        To recognize that we can’t do this alone. That God has placed people in our path to help us see, not only the issues we miss in the busyness of ministry, but the potential in us that we seem to overlook or deny.
+        What if we recognized that we can’t do this alone? God has placed people in our path to help us see, not only the issues we miss in the busyness of ministry, but the potential in us that we seem to overlook or deny.
       </p>
       <p>
-        The challenge of building and communicating your vision or mission, building your team, resolving issues of conflict, dealing with growth and leading/hiring staff… All at the same time you are diligently preparing for the weekend.
+        You face the challenge of building and communicating your vision or mission, building your team, resolving issues of conflict, dealing with growth and leading/hiring a staff. All at the same time you are diligently preparing for the weekend.
       </p>
       <p>
         The ReFresh Leadership and Coaching Network is designed to walk beside you to give insight in order to bring more capacity to your leadership. Whether you are in a ‘slump’ or just want to take your leadership up a notch, we are willing to be there and help you through.
       </p>
       <p>
-        Click <a href="#coaching">here</a> to find out what our coaching network offers and how to get started.
+        Click <a href="/coaching">here</a> to find out what our coaching network offers and how to get started.
       </p>
     </div>
     <div class='small-12 large-4 columns'>
-      <img src='https://drqkr2smv75b.cloudfront.net/www/images/IMG_0409_small.JPG'>
-      <h4>Barnabas Experience</h4>
+      <img src='https://drqkr2smv75b.cloudfront.net/www/images/CalandPastor_SM.jpg'>
+      <h4><a href="/barnabas">Barnabas Experience</a></h4>
       <p>
-        After 30 years of ministry I can tell you many things NOT to do… They far out weigh the things I could tell you to do in order to finish strong. However, at the top of that list to do is take care of your family. That starts by making your spouse a priority! It is heartbreaking today to see pastor’s lose their marriage while trying to bring hope to others.
+        After 30 years of ministry I can tell you many things NOT to do… They far outweigh the things I could tell you to do in order to finish strong. However, at the top of that list of things to do is take care of your family. That starts by making your spouse a priority! It is heartbreaking today to see pastors lose their marriage while trying to bring hope to others.
       </p>
       <p>
         That’s what the Barnabas Experience is all about. Ministry is all consuming and in today’s culture, there are no boundaries that define personal life and ministry life. Sometimes you just need to ‘get away’ for a weekend and re-focus.
@@ -39,12 +36,12 @@
         During the B.E. weekend, you and your spouse are invited into a home with great hospitality and no responsibility! You will have the opportunity to tour San Francisco and enjoy dinner with a few couples that have been in your same shoes. During the weekend we will have a time where the guys will be together doing ‘guy stuff’ and the ladies will be enjoying a cooking group. (They get to eat everything they cook). There is lots of free time as well just to recalibrate. Sunday morning you will have the opportunity to be in a dynamic service at South Bay Church to worship together. If you desire, we can arrange for you to have a “backstage” moment with the Staff and leaders of the church. 
       </p>
       <p>
-        Click <a href="#barnabas">here</a> for detail information about the Barnabas Experience and when the next weekend is available.
+        Click <a href="/barnabas">here</a> for detail information about the Barnabas Experience and when the next weekend is available.
       </p>
     </div>
     <div class='small-12 large-4 columns'>
-      <img src='https://drqkr2smv75b.cloudfront.net/www/images/IMG_0326_small.JPG'>
-      <h4>Leadership Nuggets</h4>
+      <img src='https://drqkr2smv75b.cloudfront.net/www/images/IMG_0084_small.jpg'>
+      <h4><a href="/leadership/nuggets">Leadership Nuggets</a></h4>
       <p>
         This past weekend I had the privilege to attend and event entitled TBC. These three letters stand for Transforming the Bay with Christ. The beauty of this movement is that it was not started by a pastor. That’s right! A business leader here in the San Francisco Bay area began to pull together other Christ-following business leaders and pastors for one purpose: To bring a revival to the bay area!
       </p>
