--- a/app/views/layouts/home.html.erb
+++ b/app/views/layouts/home.html.erb
@@ -2,6 +2,8 @@
 
 <%= render "layouts/parts/home/orbit" %>
 
+<%= render "layouts/parts/home/endorsement" %>
+
 <%= render "layouts/parts/home/tripanels" %>
 
 <%= render "layouts/parts/home/contactus" %>
