Begin work on coaching and Barnabas Experience pages.

--- a/app/views/coaching/index.html.erb
+++ b/app/views/coaching/index.html.erb
@@ -1,19 +1,25 @@
 <div id="big_top_image">
-  <url style="display:none;">/assets/GoldenGate_crop.jpg</url>
+  <url style="display:none;">/assets/Cal_Tina_GoldenGate.jpg</url>
 </div>
 
 <div class="row">
   <div class="small-12 large-12 columns">
-    <h2><%= page_title %></h2>
-    
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce mattis venenatis dui et ultricies. In at quam nec nulla mollis consectetur. Duis elementum fringilla elementum. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Curabitur eget augue quis augue pharetra sodales. Donec sed enim id dolor sagittis consectetur. Praesent suscipit mauris sed sapien pretium rhoncus.</p>
-
-    <p>Vivamus tristique molestie nunc eget placerat. Ut eu tristique enim. Donec sapien massa, faucibus id rutrum et, venenatis eget arcu. Pellentesque vel eros risus. Nullam eu eros nec velit consequat tempor. Morbi vehicula fringilla leo a rhoncus. Vestibulum at mauris in massa laoreet interdum. In ullamcorper, sem in pharetra efficitur, leo nulla bibendum mauris, nec aliquam leo risus faucibus metus. In interdum facilisis ligula nec viverra. Sed id massa posuere lectus luctus varius at et erat. Vestibulum vehicula est magna. Nullam laoreet vehicula odio vel aliquet. Curabitur ut arcu metus.</p>
-
-    <p>Sed vitae vestibulum sem, eu consequat elit. Donec libero dui, euismod sed augue eu, sagittis hendrerit enim. Suspendisse congue nisl et purus suscipit convallis. Vivamus libero arcu, semper at fringilla et, convallis ut risus. Vivamus ex felis, vehicula sit amet neque sit amet, vulputate sagittis neque. Donec mollis nunc neque, at scelerisque tellus condimentum vitae. Nam nec augue ornare, porttitor tortor et, vulputate eros. Quisque finibus augue vel auctor iaculis. Proin in leo nisi.</p>
-
-    <p>Fusce malesuada tempus justo sed laoreet. Maecenas sollicitudin eros et posuere porta. Quisque a mattis tortor. Vivamus porttitor faucibus nisl, non luctus metus auctor vitae. Etiam non aliquet dolor, ac tristique massa. Cras imperdiet gravida mi eu congue. Pellentesque fringilla erat sed justo tincidunt, vel pharetra ante lacinia. Mauris pulvinar euismod dui nec elementum. In nec blandit neque, et eleifend sem. Donec eleifend, felis eu luctus sodales, elit ex aliquet sapien, eget posuere risus justo a tellus. Aliquam porttitor urna sed sem auctor finibus.</p>
-
-    <p>Suspendisse volutpat feugiat leo, eget semper nisl molestie in. Nam tempor suscipit purus, at viverra lorem aliquet quis. Morbi tincidunt, ex vel tristique blandit, est mi ultrices eros, a commodo nulla mi at ipsum. Nam ac tincidunt erat, sit amet auctor urna. Vestibulum sit amet facilisis ex. Aenean ut interdum erat. Suspendisse malesuada arcu at sodales mollis. Nulla aliquet semper gravida. Sed id tempus felis. Cras placerat mi eget tortor pulvinar, sit amet consectetur lorem egestas. Nulla pretium, turpis in lobortis porttitor, mi quam dignissim sem, non porta turpis dolor ac elit. Suspendisse pellentesque dui vel odio blandit volutpat. Fusce finibus velit vitae tellus lobortis lacinia.</p> 
+    <h2><%= page_title %></h2>  
+      <p>
+        Coach / Mentor – These may be over used words within ministry circles today. However, everyone needs someone to help take them to the next level. A few years ago I had the opportunity to chat with one of the power hitters in Major League Baseball. After I was able to get the “stars” out of my eyes, he told me something pretty amazing. He has a personal hitting coach. I thought, “Wow, now here’s a guy making millions of dollars doing something that less than 1% of all athletes get to do at the professional level and he admits he needs a personal coach!”
+      </p>
+      <p>
+        He went on to say that there are ‘blind-spots’ that he is unable to see. There are patterns that he can get into that can make his batting average slump. He needs someone to point that out in order to maintain his sharpness at the plate. Someone to see and help him through the issues he can’t see to do what he is best at doing.
+      </p>
+      <h4>What if we had that attitude in ministry?</h4>
+      <p>
+        What if we recognized that we can’t do this alone? God has placed people in our path to help us see, not only the issues we miss in the busyness of ministry, but the potential in us that we seem to overlook or deny.
+      </p>
+      <p>
+        You face the challenge of building and communicating your vision or mission, building your team, resolving issues of conflict, dealing with growth and leading/hiring a staff. All at the same time you are diligently preparing for the weekend.
+      </p>
+      <p>
+        The ReFresh Leadership and Coaching Network is designed to walk beside you to give insight in order to bring more capacity to your leadership. Whether you are in a ‘slump’ or just want to take your leadership up a notch, we are willing to be there and help you through.
+      </p>
   </div>
 </div>
