--- a/app/assets/stylesheets/refresh/_layout.scss
+++ b/app/assets/stylesheets/refresh/_layout.scss
@@ -145,8 +145,8 @@ body{
     margin-top: -50px;
     background-size: cover;
     background-repeat: no-repeat;
-    background-position: center top;
-    background-image: url('/assets/GoldenGate_crop.jpg');
+    background-position: center center;
+    background-image: url('/assets/HalfMoonBay.jpg');
     width: 100%;
     height: 300px;
   }
