--- a/app/views/barnabas/index.html.erb
+++ b/app/views/barnabas/index.html.erb
@@ -1,3 +1,7 @@
+<div id="big_top_image">
+  <url style="display:none;">/assets/Cal_Tina_GoldenGate.jpg</url>
+</div>
+
 <div class="row">
   <div class="small-12 large-12 columns">
     <h2><%= page_title %></h2>
