Changed about refresh heading font for 'clean lines'

--- a/app/assets/stylesheets/refresh/_layout.scss
+++ b/app/assets/stylesheets/refresh/_layout.scss
@@ -128,7 +128,7 @@ body{
   color: $white;
   text-shadow: 1px 1px 1px rgba(0,0,0,0.5);
   h2{
-    font-family: kaushan-script, cursive;
+    //font-family: kaushan-script, cursive;
     @extend .text-center;
     color: $white;
   }
